kubernetes-manifests/prod/3/yogiyo-ingress.yaml
#######################################################################
#
# Currently not working due to minikube v1.19.0 bug.
# See below for more information:
# https://stackoverflow.com/questions/67061272/kubernetes-ingress-internal-error-occurred-failed-calling-webhook-validate-ng
#
#######################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: yogiyo
  name: yogiyo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-092d28600750a7ff8, subnet-0018f3a52a7caf9f8, subnet-046b745c6722db034
    # alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    external-dns.alpha.kubernetes.io/hostname: yogiyo-nuno.click
    # alb.ingress.kubernetes.io/ip-address-type: dualstack
    # alb.ingress.kubernetes.io/tags: Environment=prod,Team=Prod
spec:
  rules:
    - host: yogiyo-nuno.click
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
    - host: www.yogiyo-nuno.click
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
    - host: backend.yogiyo-nuno.click
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8001
